--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -70,8 +70,8 @@ a {
 }
 
 .logo-text {
-	font-size: 26px;
-	margin-left: 10px;
+	font-size: 24px;
+	margin-left: 11px;
 	margin-top: 5px;
 	margin-bottom: 0;
 	letter-spacing: 8px;
@@ -81,9 +81,10 @@ a {
 .logo-subtitle {
 	font-family: 'Poppins', sans-serif;
 	font-weight: 400;
-	font-size: 8px;
-	margin-left: 10px;
-	margin-top: 2px;
+	font-size: 10px;
+	margin-left: 11px;
+	margin-top: 0px;
+	letter-spacing: 1px;
 	color: #fff;
 }
 
@@ -104,7 +105,8 @@ a {
 .logo-subtitle-login {
 	font-family: 'Poppins', sans-serif;
 	font-weight: 400;
-	font-size: 10.5px;
+	font-size: 11px;
+	letter-spacing: 3px;
 	margin-left: 0;
 	margin-top: 5px;
 	color: #fff;
@@ -650,7 +652,7 @@ a {
 }
 
 .bg-login {
-	background-image: url(../images/login-images/bg-login-img.png);
+	background-image: url(../images/login-images/bg-login-img.jpg);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
